# Aura

./: .gitignore  README.md  float.html  index.html  login.html  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
src/: App.svelte  FloatingLyric.svelte  app.css  float-main.ts  float.css  global.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/src/: cache.rs  download.rs  lib.rs  local_music.rs  main.rs  proxy.rs  system_stats.rs  window.rs
src/components/: LyricSync.svelte
src/components/effects/: LiquidGlassSurface.svelte
src/components/layout/: BottomPlayer.svelte  ImmersivePlayer.svelte  Sidebar.svelte  TitleBar.svelte
src/components/ui/: SongRow.svelte  Toast.svelte
src/components/views/: DiscoverView.svelte  NowPlayingView.svelte  PlaylistView.svelte  ProfileView.svelte  SearchView.svelte  SettingsView.svelte
src/lib/: coverAccent.ts  github.ts  infiniteScroll.ts  keyboard.ts  lastfm.ts  lyrics.ts  player.ts  resourceUrl.ts  shortcutConfig.ts  shortcuts.ts  tauri.ts
src/lib/providers/: bilibili.ts  crypto.ts  index.ts  kugou.ts  kuwo.ts  localmusic.ts  migu.ts  netease.ts  qq.ts  taihe.ts  types.ts  utils.ts
src/lib/stores/: player.ts  playlist.ts  settings.ts  toast.ts
