[package]
name = "listen1"
version = "1.0.0"
description = "One for all free music in China"
authors = ["Listen 1"]
license = "MIT"
repository = "https://github.com/listen1/listen1_desktop"
edition = "2021"
rust-version = "1.88.0"

[lib]
name = "listen1_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "cookies", "gzip", "brotli", "deflate", "zstd"] }
tokio = { version = "1", features = ["full"] }
urlencoding = "2"
lofty = "0.22.4"
base64 = "0.22"
encoding_rs = "0.8"
sysinfo = "0.33"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-mcp-bridge = "0.10"
tauri-plugin-autostart = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
